--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/CollageCard/CollageCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/CollageCard/CollageCard.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -50,7 +51,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="secondaryBackground"/>
                             <constraints>
                                 <constraint firstItem="t6A-N4-vMD" firstAttribute="top" secondItem="5br-PK-Szq" secondAttribute="top" id="5b4-mx-Ojg"/>
                                 <constraint firstItem="zgU-kh-xnk" firstAttribute="leading" secondItem="5br-PK-Szq" secondAttribute="leading" id="D41-OP-Thd"/>
@@ -114,7 +115,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
                 <constraint firstItem="eZq-QK-VUa" firstAttribute="top" secondItem="NMh-tk-T45" secondAttribute="bottom" constant="10" id="31f-sq-QQe"/>
                 <constraint firstItem="NMh-tk-T45" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="8Ru-rA-FBi"/>
@@ -153,5 +154,8 @@
     </objects>
     <resources>
         <image name="CloseCardIcon" width="14" height="14"/>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
