--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/PremiumInfoCard/PremiumInfoCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/PremiumInfoCard/PremiumInfoCard.xib
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PremiumInfoCard" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PremiumInfoCard" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="236"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -26,21 +25,21 @@
                                     <rect key="frame" x="0.0" y="0.0" width="347" height="162"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZKE-HD-zu9">
-                                            <rect key="frame" x="0.0" y="0.0" width="29" height="162"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="28.5" height="162"/>
                                             <accessibility key="accessibilityConfiguration" identifier="title"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6FS-eQ-LQr">
-                                            <rect key="frame" x="37" y="142" width="24" height="16"/>
+                                            <rect key="frame" x="36.5" y="142" width="24" height="16"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="24" id="3U1-zY-xCS"/>
                                                 <constraint firstAttribute="width" secondItem="6FS-eQ-LQr" secondAttribute="height" multiplier="24:16" id="aGd-ID-nVt"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="secondaryBackground"/>
                                     <constraints>
                                         <constraint firstItem="ZKE-HD-zu9" firstAttribute="leading" secondItem="OKN-HT-OhB" secondAttribute="leading" id="DDx-Wf-xPK"/>
                                         <constraint firstItem="6FS-eQ-LQr" firstAttribute="bottom" secondItem="ZKE-HD-zu9" secondAttribute="bottom" constant="-4" id="Y8P-CI-b2s"/>
@@ -58,7 +57,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CKW-Jq-wJg" customClass="PremiumFeaturesView" customModule="lifebox" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CKW-Jq-wJg" customClass="PremiumFeaturesView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="214" y="0.0" width="133" height="162"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
@@ -72,7 +71,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mgb-Lg-KSQ">
                             <rect key="frame" x="0.0" y="347" width="347" height="30"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w7g-A5-gEe" customClass="GradientPremiumButton" customModule="lifebox" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w7g-A5-gEe" customClass="GradientPremiumButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="158.5" y="0.0" width="30" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="QCo-6c-6ev"/>
@@ -82,7 +81,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" name="secondaryBackground"/>
                             <constraints>
                                 <constraint firstItem="w7g-A5-gEe" firstAttribute="top" secondItem="mgb-Lg-KSQ" secondAttribute="top" id="4WV-3S-9pS"/>
                                 <constraint firstItem="w7g-A5-gEe" firstAttribute="centerX" secondItem="mgb-Lg-KSQ" secondAttribute="centerX" id="hdc-2D-1P6"/>
@@ -92,14 +91,14 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
                 <constraint firstItem="v8m-Cb-mhf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="Nq7-Ug-mQG"/>
                 <constraint firstItem="v8m-Cb-mhf" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="21" id="VRM-3M-JdI"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="v8m-Cb-mhf" secondAttribute="trailing" constant="14" id="jk6-iH-nd7"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="becomePremiumButton" destination="w7g-A5-gEe" id="Dzy-SR-q7r"/>
                 <outlet property="buttonContentView" destination="mgb-Lg-KSQ" id="DgY-Mk-QeT"/>
@@ -111,4 +110,9 @@
             <point key="canvasLocation" x="149.59999999999999" y="-72.863568215892059"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
