--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/TBMatikCard/TBMatikCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/TBMatikCard/TBMatikCard.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -75,7 +76,7 @@
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
                 <constraint firstItem="33y-eK-tG2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="36R-mj-gPL"/>
                 <constraint firstItem="DTq-Us-XcX" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="4lE-7w-AcG"/>
@@ -107,6 +108,9 @@
     </objects>
     <resources>
         <image name="CloseCardIconWhite" width="14" height="14"/>
+        <namedColor name="secondaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
